--- a/helm/ffc-ffd-graphql-poc/templates/config-map.yaml
+++ b/helm/ffc-ffd-graphql-poc/templates/config-map.yaml
@@ -1,5 +1,5 @@
-{{- include "ffc-helm-library.container-config-map" (list . "ffc-template-node.config-map") -}}
-{{- define "ffc-template-node.config-map" -}}
+{{- include "ffc-helm-library.container-config-map" (list . "ffc-ffd-graphql-poc.config-map") -}}
+{{- define "ffc-ffd-graphql-poc.config-map" -}}
 data:
   NODE_ENV: {{ quote .Values.environment }}
   PORT: {{ quote .Values.container.port }}
