--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "applicationinsights": "2.9.1"
   },
   "devDependencies": {
+    "graphi": "9.1.1",
+    "graphql": "16.8.1",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
     "nodemon": "3.0.1",
